# Template_2.1

./: CMakeLists.txt  DialogClass.cpp  DialogClass.h  DlgStruct.h  DoubleBuffering.cpp  DoubleBuffering.h  MenuClass.cpp  MenuClass.h  MessageMap.cpp  MessageMap.h  README.md  Template.h  Vector.cpp  Vector.h  WinApiFunctions.cpp  WinApiFunctions.h  Window.cpp  Window.h  WindowClass.cpp  WindowClass.h  main.cpp
